Fixes text spacing when button is compressed

--- a/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
+++ b/docroot/themes/custom/bos_theme/css/bos_theme_overrides.css
@@ -1016,12 +1016,12 @@ What: Styles the watermark for D8.
 .watermark .wm-language {
   font-style: italic;
   font-weight: normal;
-}
-.watermark .wm-forward {
-  line-height: 1.1em;
+  float: right;
+  font-size: 150%;
 }
 .watermark .wm-forward a,
 .watermark .wm-ops a {
+  line-height: 1.1em;
   margin: auto 10px;
   font-size: 18px;
   padding: 10px 15px;
